# ptomaxxing

./: AGENTS.md  pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py  routes_export.py  routes_holidays.py  routes_plan.py
backend/app/core/: config.py  locale.py
backend/app/domain/: calendar_builder.py  candidates.py  holiday_provider.py  models.py  scoring.py  selection.py
backend/app/services/: ics_export.py
backend/app/tests/integration/: test_plan_endpoint.py
backend/app/tests/unit/: test_calendar_builder.py  test_candidates.py  test_ics_export.py  test_selection.py
frontend/: index.html  package.json
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BlocksList.tsx  LocalePicker.tsx  MiniMonthStrip.tsx  PlanSummaryBar.tsx  PlannerForm.tsx
frontend/src/components/__tests__/: BlocksList.test.tsx  MiniMonthStrip.test.tsx
frontend/src/hooks/: usePlanner.ts
frontend/src/pages/: PlannerPage.tsx
frontend/src/utils/: date.ts
